[project]
name = "raspsim"
version = "0.1.0.7.1"
authors = [
  { name="Janez Rotman", email="janez.rotman@tum.de" },
]
description = "Python bindings for the RaspSim C++ library, a cycle-accurate X86-64 simulator based on PTLSim."
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dependencies = ["pyelftools"]
readme = "README.md"


[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
"raspsim" = ["*.so", "core.pyi"]
